--- a/FundSharer/Content/Site.css
+++ b/FundSharer/Content/Site.css
@@ -23,3 +23,15 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.button {
+    display: block;
+    width: 115px;
+    height: 25px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: #4cff00;
+    font-weight: bold;
+}
