--- a/FundSharer/Views/Shared/_AdminAccountRow.cshtml
+++ b/FundSharer/Views/Shared/_AdminAccountRow.cshtml
@@ -27,7 +27,7 @@
                 <buttton id="@Model.Id" class="btn btn-xs btn-danger Toggle">Deactivate</buttton>
             }
             </td>
-            <td><button class="btn btn-xs btn-danger">Delete</button></td>
+            <td><button class="btn btn-xs btn-danger Delete">Delete</button></td>
             }
     }
 </tr>
