--- a/FundSharer/Views/Home/Dashboard.cshtml
+++ b/FundSharer/Views/Home/Dashboard.cshtml
@@ -2,24 +2,7 @@
 @{
     ViewBag.Title = "Dashboard";
 }
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title" id="myModalLabel"></h4>
-            </div>
-            <div class="modal-body" id="myModalBody">
 
-            </div>
-            <div class="modal-footer" id="myModalFooter">
-
-            </div>
-        </div>
-    </div>
-</div>
 <div id="wrapper">
     <div class="panel panel-default">
         <div class="panel-heading">
@@ -138,42 +121,7 @@
             loadDonations();
             loadPayments();
             loadAdminAccounts();
-            modifyTable('#dataTable-Users')
-            modifyTable("#dataTable-BankAccount")
-            modifyTable("#dataTable-Donations")
-            modifyTable("#dataTable-Payments")
-            modifyTable("#dataTable-AdminAccounts")
-           /* $('input.global_filter').on('keyup click', function () {
-                filterGlobal();
-            });
-            $('input.column_filter').on('keyup click', function () {
-                filterColumn($(this).parents('tr').attr('data-column'));
-            }); */
-            $('#UsersLink').click(function () {
-                $("#PanelTitle").text("Users");
-                loadUsers();
-            });
-            $("#AccountsLink").click(function () {
-                $("#PanelTitle").text("Accounts");
-                loadBankAccounts();
-            });
-            $("#DonationsLink").click(function () {
-                $("#PanelTitle").text("Donations");
-                loadDonations();
-            });
-            $('#PaymentsLink').click(function () {
-                $('#PanelTitle').text("Payments");
-                loadPayments();
-            });
-            $('#AdminAccountsLink').click(function () {
-                $('#PanelTitle').text("Admin Accounts");
-            });
-            $("#AddButton").click(function () {
-                $("#myModalBody").load("/BankAccounts/AddNewAccount", function () {
-                    $("#myModalLabel").contents().first().text("Add a new account");
-                }); 
-            });
-        });
+         });
             function getActivePaneTableId() {
                 var TableId = $("div.tab-pane.active.in").first().children("table").attr("id");
                 return TableId;
@@ -195,26 +143,32 @@
             ).draw();
         }
         function loadUsers(){
-            $('#UsersBody').load("/Account/Users");
+            $('#UsersBody').load("/Account/Users", , function () {
+                modifyTable('#dataTable-Users');
+            });
         }
         function loadBankAccounts(){
-            $("#AccountsBody").load("/BankAccounts/BankAccounts");
+            $("#AccountsBody").load("/BankAccounts/BankAccounts", , function () {
+                modifyTable("#dataTable-BankAccount");
+            });
         }
         function loadDonations(){
             $("#DonationsBody").load("/Donations/Donations");
+            modifyTable("#dataTable-Donations");
         }
         function loadPayments(){
             $("#PaymentsBody").load("/Payments/Payments");
+            modifyTable("#dataTable-Payments");
         }
         function loadAdminAccounts() {
             $("#AdminAccountsBody").load("/BankAccounts/AdminAccounts");
+            modifyTable("#dataTable-AdminAccounts");
         }
         function modifyTable(TableId)
         {
             $(TableId).DataTable();
         }
-    </script>
-    
+    </script>    
     }
 
 
