--- a/FundSharer/Views/Account/_Login.cshtml
+++ b/FundSharer/Views/Account/_Login.cshtml
@@ -1,21 +1,14 @@
 ﻿@using FundSharer.Models
 @model LoginViewModel
-@{
-    ViewBag.Title = "Log in";
-}
+
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-8 col-md-offset-2">
         <section id="loginForm">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <div class="panel-title">Please Sign in.</div>
-                </div>
-                <div class="panel-body">
                     @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                         @Html.AntiForgeryToken()
                         <hr />
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" }) 
                         <div class="form-group">
                             @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
                             <div class="col-md-10">
@@ -26,7 +19,7 @@
                         <div class="form-group">
                             @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                             <div class="col-md-10">
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control"})&nbsp;
                                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -48,8 +41,6 @@
                                 @Html.ActionLink("Forgot your password?", "ForgotPassword")
                             </p>*@
                     }
-                </div>
-            </div>
         </section>
     </div>
     @*<div class="col-md-4">
