--- a/FundSharer/Views/Shared/_Layout.cshtml
+++ b/FundSharer/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - FunD ShareR</title>
+    <title>ExcElsiorr - @ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/extras")
     @Scripts.Render("~/bundles/modernizr")
@@ -20,7 +20,8 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    @Html.ActionLink("Fund Sharer", "HomePage", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    <text style="color:ActiveCaption">ExcElsiorr</text>
+                   @* @Html.ActionLink("Fund Sharer", "Welcome", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
                 </div>
             <div class="navbar-collapse collapse">
                 
@@ -45,28 +46,11 @@
         </div>
     </div>
     <div class="container body-content">
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        <h4 class="modal-title" id="myModalLabel"></h4>
-                    </div>
-                    <div class="modal-body" id="myModalBody">
-
-                    </div>
-                    <div class="modal-footer" id="myModalFooter">
-
-                    </div>
-                </div>
-            </div>
-        </div>
+       
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - FunD ShareR</p>
+            <p>&copy; @DateTime.Now.Year - ExcElsior- Created by The Byte Men&trade;</p>
         </footer>
     </div>
 
