--- a/FundSharer/Views/Shared/_LoginLink.cshtml
+++ b/FundSharer/Views/Shared/_LoginLink.cshtml
@@ -1,4 +1,5 @@
 ﻿<ul class="nav navbar-nav navbar-right">
-    <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+ @*   <li>@Html.ActionLink("Log in", "#", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>*@
+    <li><a href="#" id="loginLink">Log in</a></li>
 </ul>
 
