--- a/FundSharer/Views/Shared/_LoginRegister.cshtml
+++ b/FundSharer/Views/Shared/_LoginRegister.cshtml
@@ -23,6 +23,7 @@
                     {
                         <ul class="nav navbar-nav navbar-right">
                             <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-                            <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+                           @* <li>@Html.ActionLink("Log in", "#", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>*@
+                            <li><a href="#" id="loginLink">Log in</a></li>
                         </ul>
                     }
