Modified login vie, change body background to yellow

--- a/FundSharer/Views/Home/Dashboard.cshtml
+++ b/FundSharer/Views/Home/Dashboard.cshtml
@@ -3,6 +3,9 @@
     ViewBag.Title = "Dashboard";
 }
 
+
+@Html.Partial("_Modal")
+
 <div id="wrapper">
     <div class="panel panel-default">
         <div class="panel-heading">
