--- a/FundSharer/Views/Home/HomePage.cshtml
+++ b/FundSharer/Views/Home/HomePage.cshtml
@@ -10,6 +10,7 @@
     var Fname = identity.FindFirstValue(ClaimTypes.GivenName);
 
 <hr />
+    @Html.Partial("_Modal")
 <div class="row">
     <!--First Column-->
     <div class="col-md-6">
