--- a/FundSharer/Content/sb-admin-2.css
+++ b/FundSharer/Content/sb-admin-2.css
@@ -5,7 +5,7 @@
  */
 body {
     /*  background-color: #f8f8f8;*/
-    background-color: #edda06;
+    background-color: yellow;
 }
 #wrapper {
   width: 100%;
