--- a/FundSharer/Views/Account/_Login.cshtml
+++ b/FundSharer/Views/Account/_Login.cshtml
@@ -10,7 +10,7 @@
                         <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" }) 
                         <div class="form-group">
-                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" }):
                             <div class="col-md-10">
                                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
@@ -19,7 +19,7 @@
                         <div class="form-group">
                             @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                             <div class="col-md-10">
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control"})&nbsp;
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control"}):
                                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                             </div>
                         </div>
