--- a/FundSharer/Views/Home/Index.cshtml
+++ b/FundSharer/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-@Html.Partial("_Modal");
+@Html.Partial("_Modal")
 <div class="panel-info panel-body jumbotron text-center">
     <div>
         <h1 class="animated lightSpeedIn">ExcElsior</h1>
@@ -63,6 +63,12 @@
                 $("#myModalLabel").html("Please Sign In.")
                 $("#myModal").modal('toggle');
                 }); 
-            });
+        });
+        $(document).delegate("#registerLink", "click", function () {
+            $("#myModalBody").load("/Account/Register", function () {
+                $("#myModalLabel").html("Create a new account.")
+                $("#myModal").modal('toggle');
+            }); 
+        });
     </script>
     }
