--- a/FundSharer/Views/Shared/_Layout.cshtml
+++ b/FundSharer/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <text style="color:ActiveCaption">ExcElsiorr</text>
+                    <h1><text class="navbar-brand" style="color:white">ExcElsiorr</text></h1>
                     @* @Html.ActionLink("Fund Sharer", "Welcome", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
                 </div>
                 <div class="navbar-collapse collapse">
@@ -51,8 +51,9 @@
         <div class="container body-content">
             @RenderBody()
             <hr />
+            <hr/>
             <footer>
-                <p>&copy; @DateTime.Now.Year - ExcElsior- Created by The Byte Men&trade;</p>
+                <p>&copy; @DateTime.Now.Year - ExcElsior - Created by The Byte Men &trade;</p>
             </footer>
         </div>
     </div>
